Bare bones menu page created

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#faf1b4">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#000000"
+        android:id="@+id/playButton"
+        android:layout_width="275dp"
+        android:layout_height="60dp"
+        android:backgroundTint="#C0AEE0"
         android:onClick="goToSetupPage"
-        android:text="Button"
+        android:text="Play"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.792" />
+
+    <Button
+        android:id="@+id/rulesButton"
+        android:layout_width="128dp"
+        android:layout_height="60dp"
+        android:backgroundTint="#c0aee0"
+        android:text="Rules"
+        android:textSize="12sp"
+        tools:layout_editor_absoluteX="68dp"
+        tools:layout_editor_absoluteY="609dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="128dp"
+        android:layout_height="60dp"
+        android:backgroundTint="#c0aee0"
+        android:text="Contact us"
+        android:textSize="12sp"
+        tools:layout_editor_absoluteX="215dp"
+        tools:layout_editor_absoluteY="609dp" />
+
+    <TextView
+        android:id="@+id/menuTitle"
+        android:layout_width="398dp"
+        android:layout_height="107dp"
+        android:text="Nine Men Morris"
+        android:textAlignment="center"
+        android:textSize="48sp"
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="132dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
