Added some details to the game_page xml and added a new method to the GamePage class.

--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -1,9 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GamePage">
+    tools:context=".GamePage"
+    android:background="@drawable/background">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="96dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/white_piece">
+
+    </ImageView>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="223dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/black_piece">
+
+    </ImageView>
+
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/hint"
+        app:backgroundTint="@null">
+
+    </Button>
+
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="340dp"
+        android:layout_marginTop="150dp"
+        android:background="@drawable/help"
+        app:backgroundTint="@null">
+
+    </Button>
+
+    <ImageView
+        android:layout_width="350dp"
+        android:layout_height="300dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="210dp"
+        android:background="@drawable/board"
+        android:scaleType="fitXY">
+
+    </ImageView>
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="55dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="620dp"
+        android:background="#a8f6f8"
+        android:text="Exit game"
+        android:textColor="@color/black"
+        app:backgroundTint="@null">
+
+    </Button>
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="55dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="620dp"
+        android:background="#a8f6f8"
+        android:text="Reset game"
+        android:textColor="@color/black"
+        app:backgroundTint="@null">
+
+    </Button>
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="55dp"
+        android:layout_marginLeft="290dp"
+        android:layout_marginTop="620dp"
+        android:background="#a8f6f8"
+        android:onClick="ChangePieces"
+        android:text="Change pieces"
+        android:textColor="@color/black"
+        app:backgroundTint="@null">
+
+    </Button>
+
+
+
+
+
+</RelativeLayout>
