--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -56,6 +56,8 @@
     </ImageView>
 
     <Button
+        android:id="@+id/ExitPage"
+        android:onClick="ExitGame"
         android:layout_width="100dp"
         android:layout_height="55dp"
         android:layout_marginLeft="20dp"
@@ -68,6 +70,8 @@
     </Button>
 
     <Button
+        android:id="@+id/Reset"
+        android:onClick="ResetGame"
         android:layout_width="100dp"
         android:layout_height="55dp"
         android:layout_marginLeft="150dp"
