--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,12 @@
         android:backgroundTint="#c0aee0"
         android:text="Rules"
         android:textSize="12sp"
-        tools:layout_editor_absoluteX="68dp"
-        tools:layout_editor_absoluteY="609dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.907" />
 
     <Button
         android:id="@+id/button2"
@@ -38,8 +42,12 @@
         android:backgroundTint="#c0aee0"
         android:text="Contact us"
         android:textSize="12sp"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="609dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.759"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.907" />
 
     <TextView
         android:id="@+id/menuTitle"
