add spot for each pieces on game board

--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -16,6 +16,349 @@
 
     </ImageView>
 
+
+
+    <RelativeLayout
+        android:id="@+id/board"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_centerInParent="true"
+        android:layout_margin="20dp"
+        android:clipChildren="false" >
+
+        <!-- Hitboxes -->
+        <!-- Outer circle -->
+
+        <ImageView
+            android:id="@+id/board_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:src="@drawable/board" />
+
+        <FrameLayout
+            android:id="@+id/area2"
+            style="@style/Hitbox"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="9dp"
+            android:contentDescription="2" />
+
+        <FrameLayout
+            android:id="@+id/area10"
+            style="@style/Hitbox"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="13dp"
+            android:contentDescription="10" />
+
+        <FrameLayout
+            android:id="@+id/area15"
+            style="@style/Hitbox"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="6dp"
+            android:contentDescription="15" />
+
+        <FrameLayout
+            android:id="@+id/area23"
+            style="@style/Hitbox"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:contentDescription="23" />
+
+        <!-- middle circle -->
+
+        <FrameLayout
+            android:id="@+id/area1"
+            style="@style/Hitbox"
+            android:layout_alignLeft="@id/area10"
+            android:layout_alignTop="@id/area2"
+            android:layout_marginLeft="-1dp"
+            android:layout_marginTop="-2dp"
+            android:contentDescription="1" />
+
+        <FrameLayout
+            android:id="@+id/area3"
+            style="@style/Hitbox"
+            android:layout_alignTop="@id/area2"
+            android:layout_alignRight="@id/area15"
+            android:layout_marginTop="-4dp"
+            android:contentDescription="3" />
+
+        <FrameLayout
+            android:id="@+id/area22"
+            style="@style/Hitbox"
+            android:layout_alignLeft="@id/area10"
+            android:layout_alignBottom="@id/area23"
+            android:layout_marginLeft="-13dp"
+            android:layout_marginBottom="0dp"
+            android:contentDescription="22" />
+
+        <FrameLayout
+            android:id="@+id/area24"
+            style="@style/Hitbox"
+            android:layout_alignRight="@id/area15"
+            android:layout_alignBottom="@id/area23"
+            android:layout_marginRight="-17dp"
+            android:layout_marginBottom="-15dp"
+            android:contentDescription="24" />
+
+        <FrameLayout
+            android:id="@+id/area5"
+            style="@style/Hitbox"
+            android:layout_below="@id/area2"
+            android:layout_centerHorizontal="true"
+            android:contentDescription="5" />
+
+        <FrameLayout
+            android:id="@+id/area11"
+            style="@style/Hitbox"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/area10"
+            android:contentDescription="11" />
+
+        <FrameLayout
+            android:id="@+id/area14"
+            style="@style/Hitbox"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/area15"
+            android:contentDescription="14" />
+
+        <FrameLayout
+            android:id="@+id/area20"
+            style="@style/Hitbox"
+            android:layout_above="@id/area23"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="-8dp"
+            android:contentDescription="20" />
+
+        <FrameLayout
+            android:id="@+id/area4"
+            style="@style/Hitbox"
+            android:layout_alignLeft="@id/area11"
+            android:layout_alignTop="@id/area5"
+            android:layout_marginLeft="2dp"
+            android:layout_marginTop="2dp"
+            android:contentDescription="4" />
+
+        <!-- middle circle -->
+
+        <FrameLayout
+            android:id="@+id/area6"
+            style="@style/Hitbox"
+            android:layout_alignTop="@id/area5"
+            android:layout_alignRight="@id/area14"
+            android:layout_marginTop="1dp"
+            android:contentDescription="6" />
+
+        <FrameLayout
+            android:id="@+id/area19"
+            style="@style/Hitbox"
+            android:layout_alignLeft="@id/area11"
+            android:layout_alignBottom="@id/area20"
+            android:layout_marginLeft="2dp"
+            android:layout_marginBottom="12dp"
+            android:contentDescription="19" />
+
+        <FrameLayout
+            android:id="@+id/area21"
+            style="@style/Hitbox"
+            android:layout_alignRight="@id/area14"
+            android:layout_alignBottom="@id/area20"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="11dp"
+            android:contentDescription="21" />
+
+        <FrameLayout
+            android:id="@+id/area8"
+            style="@style/Hitbox"
+            android:layout_below="@id/area5"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="9dp"
+            android:contentDescription="8" />
+
+        <FrameLayout
+            android:id="@+id/area12"
+            style="@style/Hitbox"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/area11"
+            android:contentDescription="12" />
+
+        <FrameLayout
+            android:id="@+id/area13"
+            style="@style/Hitbox"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="7dp"
+            android:layout_toLeftOf="@id/area14"
+            android:contentDescription="13" />
+
+        <FrameLayout
+            android:id="@+id/area17"
+            style="@style/Hitbox"
+            android:layout_above="@id/area20"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="21dp"
+            android:contentDescription="17" />
+
+        <FrameLayout
+            android:id="@+id/area7"
+            style="@style/Hitbox"
+            android:layout_alignLeft="@id/area12"
+            android:layout_alignTop="@id/area8"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="-5dp"
+            android:contentDescription="7" />
+
+        <FrameLayout
+            android:id="@+id/area9"
+            style="@style/Hitbox"
+            android:layout_alignTop="@id/area8"
+            android:layout_alignRight="@id/area13"
+            android:layout_marginTop="-2dp"
+            android:contentDescription="9" />
+
+        <FrameLayout
+            android:id="@+id/area16"
+            style="@style/Hitbox"
+            android:layout_alignLeft="@id/area12"
+            android:layout_alignBottom="@id/area17"
+            android:layout_marginLeft="4dp"
+            android:layout_marginBottom="-6dp"
+            android:contentDescription="16" />
+
+        <FrameLayout
+            android:id="@+id/area18"
+            style="@style/Hitbox"
+            android:layout_alignRight="@id/area13"
+            android:layout_alignBottom="@id/area17"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="-2dp"
+            android:contentDescription="18" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/whiteCheckerArea"
+        style="@style/CheckerArea"
+        android:layout_above="@id/board"
+        android:clipChildren="false" >
+
+        <ImageView
+            android:id="@+id/whiteChecker1"
+            style="@style/CheckerImage"
+            android:contentDescription="1"
+            android:src="@drawable/white_checker" />
+
+        <ImageView
+            android:id="@+id/whiteChecker2"
+            style="@style/CheckerImage"
+            android:contentDescription="2"
+            android:src="@drawable/white_checker" />
+
+        <ImageView
+            android:id="@+id/whiteChecker3"
+            style="@style/CheckerImage"
+            android:contentDescription="3"
+            android:src="@drawable/white_checker" />
+
+        <ImageView
+            android:id="@+id/whiteChecker4"
+            style="@style/CheckerImage"
+            android:contentDescription="4"
+            android:src="@drawable/white_checker" />
+
+        <ImageView
+            android:id="@+id/whiteChecker5"
+            style="@style/CheckerImage"
+            android:contentDescription="5"
+            android:src="@drawable/white_checker" />
+
+        <ImageView
+            android:id="@+id/whiteChecker6"
+            style="@style/CheckerImage"
+            android:contentDescription="6"
+            android:src="@drawable/white_checker" />
+
+        <ImageView
+            android:id="@+id/whiteChecker7"
+            style="@style/CheckerImage"
+            android:contentDescription="7"
+            android:src="@drawable/white_checker" />
+
+        <ImageView
+            android:id="@+id/whiteChecker8"
+            style="@style/CheckerImage"
+            android:contentDescription="8"
+            android:src="@drawable/white_checker" />
+
+        <ImageView
+            android:id="@+id/whiteChecker9"
+            style="@style/CheckerImage"
+            android:contentDescription="9"
+            android:src="@drawable/white_checker" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/blackCheckerArea"
+        style="@style/CheckerArea"
+        android:layout_below="@id/board"
+        android:clipChildren="false" >
+
+        <ImageView
+            android:id="@+id/blackChecker1"
+            style="@style/CheckerImage"
+            android:contentDescription="1"
+            android:src="@drawable/black_checker" />
+
+        <ImageView
+            android:id="@+id/blackChecker2"
+            style="@style/CheckerImage"
+            android:contentDescription="2"
+            android:src="@drawable/black_checker" />
+
+        <ImageView
+            android:id="@+id/blackChecker3"
+            style="@style/CheckerImage"
+            android:contentDescription="3"
+            android:src="@drawable/black_checker" />
+
+        <ImageView
+            android:id="@+id/blackChecker4"
+            style="@style/CheckerImage"
+            android:contentDescription="4"
+            android:src="@drawable/black_checker" />
+
+        <ImageView
+            android:id="@+id/blackChecker5"
+            style="@style/CheckerImage"
+            android:contentDescription="5"
+            android:src="@drawable/black_checker" />
+
+        <ImageView
+            android:id="@+id/blackChecker6"
+            style="@style/CheckerImage"
+            android:contentDescription="6"
+            android:src="@drawable/black_checker" />
+
+        <ImageView
+            android:id="@+id/blackChecker7"
+            style="@style/CheckerImage"
+            android:contentDescription="7"
+            android:src="@drawable/black_checker" />
+
+        <ImageView
+            android:id="@+id/blackChecker8"
+            style="@style/CheckerImage"
+            android:contentDescription="8"
+            android:src="@drawable/black_checker" />
+
+        <ImageView
+            android:id="@+id/blackChecker9"
+            style="@style/CheckerImage"
+            android:contentDescription="9"
+            android:src="@drawable/black_checker" />
+    </LinearLayout>
     <ImageView
         android:layout_width="100dp"
         android:layout_height="80dp"
@@ -44,16 +387,6 @@
         app:backgroundTint="@null">
 
     </Button>
-
-    <ImageView
-        android:layout_width="350dp"
-        android:layout_height="300dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="210dp"
-        android:background="@drawable/board"
-        android:scaleType="fitXY">
-
-    </ImageView>
 
     <Button
         android:id="@+id/ExitPage"
