Added toast messages for selections and buttons now reflect the choice of colour made

--- a/app/src/main/res/menu/colour_menu.xml
+++ b/app/src/main/res/menu/colour_menu.xml
@@ -11,4 +11,7 @@
 
     <item android:id="@+id/menu_yellow"
         android:title="Yellow"/>
+
+    <item android:id="@+id/menu_noColour"
+        android:title="Blank"/>
 </menu>
